<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Help">

    <TableLayout
            android:layout_width="0dp"
            android:layout_height="0dp" android:id="@+id/tableLayout" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

        <TableRow android:layout_width="match_parent" android:layout_height="match_parent">
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/soggetto"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large" android:paddingLeft="20dp"
                    android:paddingRight="20dp"/>
        </TableRow>
        <TableRow android:layout_width="match_parent" android:layout_height="match_parent">
            <EditText
                    android:id="@+id/soggetto"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start|top"
                    android:background="#07889b"
                    android:lines="2" android:layout_weight="1" android:layout_marginRight="20dp"
                    android:layout_marginLeft="20dp"
                    android:textColor="@color/white"/>
        </TableRow>
        <TableRow android:layout_width="match_parent" android:layout_height="match_parent">
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/corpo"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large" android:paddingLeft="20dp"
                    android:paddingRight="20dp"/>
        </TableRow>
        <TableRow android:layout_width="match_parent" android:layout_height="match_parent">
            <EditText
                    android:id="@+id/messaggio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start|top"
                    android:background="#07889b"
                    android:lines="10" android:layout_weight="1" android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:textColor="@color/white"/>
        </TableRow>
        <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" android:paddingLeft="20dp" android:paddingRight="20dp">
        </TableRow>
    </TableLayout>
    <Button
            android:id="@+id/manda"
            android:layout_width="129dp"
            android:layout_height="wrap_content"
            android:text="manda email"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:gravity="center"
            android:layout_marginBottom="36dp"
            android:onClick="mandaEmail"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:background="@drawable/button_background"/>
</android.support.constraint.ConstraintLayout>