<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".NuovoAnnuncio">

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="10dp"
            app:layout_constraintHorizontal_bias="0.0" android:layout_marginEnd="10dp"
            tools:layout_editor_absoluteY="0dp">

        <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <TableRow android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:gravity="center"
                      android:minHeight="90dp">
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:textAlignment="center"
                        android:text="Inserisci dettagli annuncio:"
                        android:textColor="@color/black"
                        android:textSize="24sp"
                        android:id="@+id/textView3"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        android:layout_marginTop="19dp"
                        app:layout_constraintEnd_toEndOf="parent"/>
            </TableRow>
            <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:minHeight="90dp">
                <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:textAlignment="center"
                        android:hint="indirizzo"
                        android:textColorHint="@color/hint_color"
                        android:textColor="@color/white"
                        android:ems="10"
                        android:id="@+id/indirizzo"
                        android:maxLength="80"
                        app:layout_constraintStart_toStartOf="parent"
                        android:layout_marginTop="19dp"
                        app:layout_constraintTop_toBottomOf="@+id/textView"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:background="#07889b"
                        android:minHeight="50dp"
                        android:inputType="text" android:enabled="true"
                        android:visibility="visible"/>
            </TableRow>
            <TableRow android:layout_width="match_parent"
                      android:layout_height="match_parent"
                      android:gravity="center">

                <Spinner
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/zona"
                        android:visibility="visible"
                        android:minEms="13"
                        android:minHeight="35dp"
                        android:layout_marginTop="20dp" android:layout_marginBottom="20dp"/>
            </TableRow>
            <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:minHeight="90dp">
                <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:textAlignment="center"
                        android:hint="prezzo al mese"
                        android:textColorHint="@color/hint_color"
                        android:textColor="@color/white"
                        android:ems="10"
                        android:id="@+id/prezzo2"
                        android:maxLength="80"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:background="#07889b"
                        android:minHeight="50dp"
                        android:enabled="true"
                        android:visibility="visible" android:inputType="number" android:layout_marginBottom="22dp"
                        android:layout_marginTop="10dp"/>
            </TableRow>
            <TableRow android:layout_width="match_parent"
                      android:layout_height="match_parent"
                      android:gravity="center"
                      android:minHeight="90dp">
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:textAlignment="center"
                        android:text="Inserisci dettagli annuncio:"
                        android:textColor="@color/black"
                        android:textSize="24sp"
                        android:id="@+id/textView4"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"/>
            </TableRow>
            <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:minHeight="90dp" android:paddingTop="20dp">
                <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">
                    <TextView
                            android:text="numero stanze singole:"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" android:id="@+id/textView7"
                            android:textColor="@android:color/black"/>
                    <Spinner
                            android:layout_width="205dp"
                            android:layout_height="wrap_content"
                            android:id="@+id/singola"
                            android:visibility="visible"
                            android:minEms="13"
                            android:minHeight="35dp"
                            android:layout_marginTop="20dp" android:layout_marginBottom="20dp"/>
                </LinearLayout>
            </TableRow>
            <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:minHeight="90dp" android:paddingTop="20dp">
                <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">
                    <TextView
                            android:text="numero stanze doppie:"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" android:id="@+id/textView8"
                            android:textColor="@android:color/black"/>
                    <Spinner
                            android:layout_width="205dp"
                            android:layout_height="wrap_content"
                            android:id="@+id/doppia"
                            android:visibility="visible"
                            android:minEms="13"
                            android:minHeight="35dp"
                            android:layout_marginTop="20dp" android:layout_marginBottom="20dp"/>
                </LinearLayout>
            </TableRow>
            <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:minHeight="90dp" android:paddingTop="20dp">
                <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">
                    <TextView
                            android:text="numero stanze triple:"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" android:id="@+id/textView10"
                            android:textColor="@android:color/black"/>
                    <Spinner
                            android:layout_width="205dp"
                            android:layout_height="wrap_content"
                            android:id="@+id/tripla"
                            android:visibility="visible"
                            android:minEms="13"
                            android:minHeight="35dp"
                            android:layout_marginTop="20dp" android:layout_marginBottom="20dp"/>
                </LinearLayout>
            </TableRow>
            <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:minHeight="90dp" android:paddingTop="20dp">
                <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">
                    <TextView
                            android:text="numero bagni:"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" android:id="@+id/textView9"
                            android:textColor="@android:color/black"/>
                    <Spinner
                            android:layout_width="205dp"
                            android:layout_height="wrap_content"
                            android:id="@+id/bagno"
                            android:visibility="visible"
                            android:minEms="13"
                            android:minHeight="35dp"
                            android:layout_marginTop="20dp" android:layout_marginBottom="20dp"/>
                </LinearLayout>
            </TableRow>
            <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:minHeight="50dp">
                <TextView
                        android:text="TextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/errann"
                        android:layout_marginBottom="10dp"
                        android:textColor="@android:color/holo_red_light"
                        android:ems="10"
                        android:visibility="gone"
                        android:textSize="21sp"
                        android:gravity="center"
                        android:layout_marginTop="20dp"/>
            </TableRow>
            <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:minHeight="150dp">
                <Button
                        android:id="@+id/inserisci"
                        android:layout_width="wrap_content"
                        android:layout_height="48dp"
                        android:layout_marginBottom="30dp"
                        android:background="@drawable/button_background"
                        android:text="inserisci annuncio"
                        android:textAllCaps="false"
                        android:textColor="@color/white"
                        android:textSize="21sp"
                        android:onClick="inserisci"/>
            </TableRow>
        </TableLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>