...

    //Array zone Torino
    <string-array name="lista_zone">
        <item></item>
        <item>Centro Storico</item>
        <item>San Salvario</item>
        <item>Crocetta</item>
        <item>San Paolo</item>
        <item>Cenisia</item>
        <item>Campidoglio</item>
        <item>Aurora</item>
        <item>Vanchiglia</item>
        <item>Nizza</item>
...
